ref: Use get index instead of get first for compatibility with other versions